--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
+    "sweetalert2": "^11.3.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
